simpylc/simulations/car/out.txt
lidar_socketpilot_client.java:24: error: incompatible types: String cannot be converted to int
                var lidarDistances = sensorObject ["lidarDistances"];
                                                   ^
lidar_socketpilot_client.java:24: error: array required, but Object found
                var lidarDistances = sensorObject ["lidarDistances"];
                                                  ^
lidar_socketpilot_client.java:25: error: incompatible types: String cannot be converted to int
                var lidarHalfApertureAngle = sensorObject ["lidarHalfApertureAngle"];
                                                           ^
lidar_socketpilot_client.java:25: error: array required, but Object found
                var lidarHalfApertureAngle = sensorObject ["lidarHalfApertureAngle"];
                                                          ^
lidar_socketpilot_client.java:29: error: cannot find symbol
                nearestObstacleDistance = finity;
                ^
  symbol:   variable nearestObstacleDistance
  location: class Client
lidar_socketpilot_client.java:30: error: cannot find symbol
                nearestObstacleAngle = 0;
                ^
  symbol:   variable nearestObstacleAngle
  location: class Client
lidar_socketpilot_client.java:32: error: cannot find symbol
                nextObstacleDistance = self.finity;
                ^
  symbol:   variable nextObstacleDistance
  location: class Client
lidar_socketpilot_client.java:32: error: cannot find symbol
                nextObstacleDistance = self.finity;
                                       ^
  symbol:   variable self
  location: class Client
lidar_socketpilot_client.java:33: error: cannot find symbol
                nextObstacleAngle = 0;
                ^
  symbol:   variable nextObstacleAngle
  location: class Client
lidar_socketpilot_client.java:36: error: cannot find symbol
                    lidarDistance = lidarDistances [lidarAngle];
                    ^
  symbol:   variable lidarDistance
  location: class Client
lidar_socketpilot_client.java:38: error: cannot find symbol
                    if (lidarDistance < nearestObstacleDistance) {
                        ^
  symbol:   variable lidarDistance
  location: class Client
lidar_socketpilot_client.java:38: error: cannot find symbol
                    if (lidarDistance < nearestObstacleDistance) {
                                        ^
  symbol:   variable nearestObstacleDistance
  location: class Client
lidar_socketpilot_client.java:39: error: cannot find symbol
                        nextObstacleDistance = nearestObstacleDistance;
                        ^
  symbol:   variable nextObstacleDistance
  location: class Client
lidar_socketpilot_client.java:39: error: cannot find symbol
                        nextObstacleDistance = nearestObstacleDistance;
                                               ^
  symbol:   variable nearestObstacleDistance
  location: class Client
lidar_socketpilot_client.java:40: error: cannot find symbol
                        nextObstacleAngle = nearestObstacleAngle;
                        ^
  symbol:   variable nextObstacleAngle
  location: class Client
lidar_socketpilot_client.java:40: error: cannot find symbol
                        nextObstacleAngle = nearestObstacleAngle;
                                            ^
  symbol:   variable nearestObstacleAngle
  location: class Client
lidar_socketpilot_client.java:42: error: cannot find symbol
                        nearestObstacleDistance = lidarDistance;
                        ^
  symbol:   variable nearestObstacleDistance
  location: class Client
lidar_socketpilot_client.java:42: error: cannot find symbol
                        nearestObstacleDistance = lidarDistance;
                                                  ^
  symbol:   variable lidarDistance
  location: class Client
lidar_socketpilot_client.java:43: error: cannot find symbol
                        nearestObstacleAngle = lidarAngle;
                        ^
  symbol:   variable nearestObstacleAngle
  location: class Client
lidar_socketpilot_client.java:45: error: cannot find symbol
                    else if (lidarDistance < nextObstacleDistance) {
                             ^
  symbol:   variable lidarDistance
  location: class Client
lidar_socketpilot_client.java:45: error: cannot find symbol
                    else if (lidarDistance < nextObstacleDistance) {
                                             ^
  symbol:   variable nextObstacleDistance
  location: class Client
lidar_socketpilot_client.java:46: error: cannot find symbol
                        nextObstacleDistance = lidarDistance;
                        ^
  symbol:   variable nextObstacleDistance
  location: class Client
lidar_socketpilot_client.java:46: error: cannot find symbol
                        nextObstacleDistance = lidarDistance;
                                               ^
  symbol:   variable lidarDistance
  location: class Client
lidar_socketpilot_client.java:47: error: cannot find symbol
                        nextObstacleAngle = lidarAngle;
                        ^
  symbol:   variable nextObstacleAngle
  location: class Client
lidar_socketpilot_client.java:51: error: cannot find symbol
                targetObstacleDistance = (nearestObstacleDistance + nextObstacleDistance) / 2;
                ^
  symbol:   variable targetObstacleDistance
  location: class Client
lidar_socketpilot_client.java:51: error: cannot find symbol
                targetObstacleDistance = (nearestObstacleDistance + nextObstacleDistance) / 2;
                                          ^
  symbol:   variable nearestObstacleDistance
  location: class Client
lidar_socketpilot_client.java:51: error: cannot find symbol
                targetObstacleDistance = (nearestObstacleDistance + nextObstacleDistance) / 2;
                                                                    ^
  symbol:   variable nextObstacleDistance
  location: class Client
lidar_socketpilot_client.java:52: error: cannot find symbol
                targetObstacleAngle = (nearestObstacleAngle + nextObstacleAngle) / 2;
                ^
  symbol:   variable targetObstacleAngle
  location: class Client
lidar_socketpilot_client.java:52: error: cannot find symbol
                targetObstacleAngle = (nearestObstacleAngle + nextObstacleAngle) / 2;
                                       ^
  symbol:   variable nearestObstacleAngle
  location: class Client
lidar_socketpilot_client.java:52: error: cannot find symbol
                targetObstacleAngle = (nearestObstacleAngle + nextObstacleAngle) / 2;
                                                              ^
  symbol:   variable nextObstacleAngle
  location: class Client
lidar_socketpilot_client.java:54: error: cannot find symbol
                steeringAngle = targetObstacleAngle;
                ^
  symbol:   variable steeringAngle
  location: class Client
lidar_socketpilot_client.java:54: error: cannot find symbol
                steeringAngle = targetObstacleAngle;
                                ^
  symbol:   variable targetObstacleAngle
  location: class Client
lidar_socketpilot_client.java:55: error: cannot find symbol
                targetVelocity = driveEnabled ? ((90 - abs (steeringAngle)) / 60) : 0;
                ^
  symbol:   variable targetVelocity
  location: class Client
lidar_socketpilot_client.java:55: error: cannot find symbol
                targetVelocity = driveEnabled ? ((90 - abs (steeringAngle)) / 60) : 0;
                                 ^
  symbol:   variable driveEnabled
  location: class Client
lidar_socketpilot_client.java:55: error: cannot find symbol
                targetVelocity = driveEnabled ? ((90 - abs (steeringAngle)) / 60) : 0;
                                                            ^
  symbol:   variable steeringAngle
  location: class Client
lidar_socketpilot_client.java:60: error: cannot find symbol
                actuatorObject.put ("steeringAngle", steeringAngle);
                                                     ^
  symbol:   variable steeringAngle
  location: class Client
lidar_socketpilot_client.java:61: error: cannot find symbol
                actuatorObject.put ("targetVelocity", targetVelocity);
                                                      ^
  symbol:   variable targetVelocity
  location: class Client
lidar_socketpilot_client.java:62: error: cannot find symbol
                var actuatorStringWriter = new StringWriter ();
                                               ^
  symbol:   class StringWriter
  location: class Client
38 errors
